added some comments

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-/PyOpenglEnv/*
-/PyOpenglEnv/Include/*
-/PyOpenglEnv/Lib/*
-/PyOpenglEnv/Scripts/*
-/PyOpenglEnv/tcl/*
-
+/EEGTools/*
+/AnnapurnaData/*
